--- a/assg1.html
+++ b/assg1.html
@@ -29,6 +29,8 @@
         <button onclick="convert()">Convert</button>
 
         <h2 id="result"></h2>
+
+        <a class="link" href="https://jhohnestrella.github.io/jboestrella.github.io/="_blank">Home</a>
     </div>
 </body>
 </html>
