--- a/assg1.html
+++ b/assg1.html
@@ -30,7 +30,7 @@
 
         <h2 id="result"></h2>
 
-        <a class="link" href="https://jhohnestrella.github.io/jboestrella.github.io/="_blank">Home</a>
+        <a class="link" href="https://jhohnestrella.github.io/jboestrella.github.io/" target="_blank">Home</a>
     </div>
 </body>
 </html>
