--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Welcome to My Home Page</h1>
     <p>Click on the links below to visit other websites:</p>
-    <a class="link" href="http://127.0.0.1:5500/assg1.html" target="_blank">Assg #1 - Conversion Tool</a>
+    <a href="assg1.html">Assg #1 - Conversion Tool</a>
 </body>
 </html>
