--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <h1>Welcome to My Home Page</h1>
-    <a href="assg1.html">Assg #1 - Conversion Tool</a>
-    <a href="assg2.html">Assg #2 - Income Tax Calculator</a>
-    <a href="assg3.html">Assg #3 - Factorial - Sum - Average</a>
-    <a href="assg4.html">Assg #4 - Simple Payroll</a>
+    <p>Click on the links below to visit other websites:</p>
+    <nav>
+        <div class="link-container">
+            <a href="assg1.html">Assg #1 - Conversion Tool</a>
+            <a href="assg2.html">Assg #2 - Income Tax Calculator</a>
+            <a href="assg3.html">Assg #3 - Factorial - Sum - Average</a>
+            <a href="assg4.html">Assg #4 - Simple Payroll</a>
+        </div>
+    </nav>
 </body>
 </html>
