--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Home Page</h1>
-    <p>Click on the links below to visit other websites:</p>
     <nav>
         <div class="link-container">
             <a href="assg1.html">Assg #1 - Conversion Tool</a>
@@ -17,5 +15,7 @@
             <a href="assg4.html">Assg #4 - Simple Payroll</a>
         </div>
     </nav>
+    <h1>Welcome to My Home Page</h1>
+    <p>Click on the links above to visit other websites:</p>
 </body>
 </html>
