--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
             <a href="assg4.html">Assg #4 - Simple Payroll</a>
         </div>
     </nav>
+    <h2>CS 1130 - Introduction to Computing</h2>
+    <h3>by Jhohn Bennidict O. Estrella - Bachelor of Science in Computer Science</h3>
+    <p>
+        My final project for Introduction to Computing involves creating a collection of five interconnected websites that demonstrate essential programming and web development skills. The project includes a Home Page that serves as a central hub, providing links to the other pages. One of the pages features an Income Tax Calculator, allowing users to input their income and calculate their tax based on predefined rules. Another page focuses on mathematical operations, enabling users to calculate the Factorial, Sum, and Average of natural numbers. Additionally, there is a Conversion Calculator for converting values between Fahrenheit and Celsius, as well as meters and feet. The final page is a Simple Payroll Calculator, designed to compute employee pay efficiently. Together, these websites showcase practical applications of programming concepts in everyday tasks.
+    </p>
 </body>
 </html>
